TCA-319 #comment This commit adds the config and implementation of the lambda function to host the SSR page. #time 3h

--- a/src/utils/certificate-sharing/certificate-ssr/ssr-certificate-template.html
+++ b/src/utils/certificate-sharing/certificate-ssr/ssr-certificate-template.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>${event.title}</title>
-    <meta property='og:image' content='data:image/jpeg;base64,${screenshot}' />
+    <title>${certTitle}</title>
+    <meta property='og:image' content='${certImageUrl}' />
     <style>
         body {
             display: flex;
@@ -21,7 +21,7 @@
 
 <body>
     <div>
-        <img src='data:image/jpeg;base64,${screenshot}' />
+        <img src='${certImageUrl}' />
     </div>
 </body>
 
