TCA-488 #comment This commit adds twitter-specific meta tags for sharing #time 1h

--- a/src/utils/certificate-sharing/certificate-ssr/ssr-certificate-template.html
+++ b/src/utils/certificate-sharing/certificate-ssr/ssr-certificate-template.html
@@ -3,6 +3,11 @@
 <head>
     <title>${certTitle}</title>
     <meta property='og:image' content='${certImageUrl}' />
+    <meta property='og:title' content='${certTitle}' />
+    <meta name='twitter:card' content='summary_large_image' />
+    <meta name='twitter:site' content='@Topcoder' />
+    <meta name='twitter:title' content='${certTitle}' />    
+    <meta name='twitter:image' content='s${certImageUrl}' />
     <style>
         body {
             display: flex;
