TCA-488 clean-up

--- a/src/utils/certificate-sharing/certificate-ssr/ssr-certificate-template.html
+++ b/src/utils/certificate-sharing/certificate-ssr/ssr-certificate-template.html
@@ -2,12 +2,12 @@
 
 <head>
     <title>${certTitle}</title>
+    <meta property='og:site_name' content='Topcoder' />
+    <meta property='og:type' content='game.achievement' />
     <meta property='og:image' content='${certImageUrl}' />
     <meta property='og:title' content='${certTitle}' />
-    <meta name='twitter:card' content='summary_large_image' />
     <meta name='twitter:site' content='@Topcoder' />
-    <meta name='twitter:title' content='${certTitle}' />    
-    <meta name='twitter:image' content='s${certImageUrl}' />
+    <meta name='twitter:card' content='summary_large_image' />
     <style>
         body {
             display: flex;
