TCA-584 Update SSR template #time 1h

--- a/src/utils/certificate-sharing/certificate-ssr/ssr-certificate-template.html
+++ b/src/utils/certificate-sharing/certificate-ssr/ssr-certificate-template.html
@@ -4,7 +4,7 @@
     <title>${certTitle}</title>
     <meta property='og:site_name' content='Topcoder' />
     <meta property='og:type' content='game.achievement' />
-    <meta property='og:image' content='${certImageUrl}' />
+    <meta property='og:image' content='${certPreviewImageUrl}' />
     <meta property='og:title' content='${certTitle}' />
     <meta name='twitter:site' content='@Topcoder' />
     <meta name='twitter:card' content='summary_large_image' />
